Add title and favicon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+  <title>Tsukuyumi Board Generator</title>
+  <link rel="icon" href="icons/tsukuyumi.png">
+</head>
 <body>
   
   <div id="grid" style="height:1000px; width:100%"></div>
