--- a/index.html
+++ b/index.html
@@ -1,21 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tsukuyumi Board Generator</title>
   <link rel="icon" href="icons/tsukuyumi.png">
+  
+  <link rel="stylesheet" href="bootstrap.min.css">
 </head>
 <body>
   
-  <div id="grid" style="height:1000px; width:100%"></div>
+  <main class="container">
+    <form action="#" id="controls">
+      <div class="row">
+        <div class="col-md-6 mt-2 mb-2">
+          <h4>Number of players</h4>
+          <input type="radio" class="btn-check" name="tiles" id="players-2" autocomplete="off" value="10">
+          <label class="btn btn-outline-secondary btn-lg" for="players-2">2p</label>
+
+          <input type="radio" class="btn-check" name="tiles" id="players-3" autocomplete="off" value="21">
+          <label class="btn btn-outline-secondary btn-lg" for="players-3">3p</label>
+
+          <input type="radio" class="btn-check" name="tiles" id="players-4" autocomplete="off" value="28" checked>
+          <label class="btn btn-outline-secondary btn-lg" for="players-4">4p</label>
+
+          <input type="radio" class="btn-check" name="tiles" id="players-5" autocomplete="off" value="35">
+          <label class="btn btn-outline-secondary btn-lg" for="players-5">5p</label>
+
+          <input type="radio" class="btn-check" name="tiles" id="players-6" autocomplete="off" value="42">
+          <label class="btn btn-outline-secondary btn-lg" for="players-6">6p</label>
+        </div>
+        <div class="col-md-6 mt-2 mb-2">
+          <h4>Chaos level</h4>
+          <input type="radio" class="btn-check" name="chaos" id="chaos-1" autocomplete="off" value="1">
+          <label class="btn btn-outline-secondary btn-lg" for="chaos-1">None</label>
+
+          <input type="radio" class="btn-check" name="chaos" id="chaos-2" autocomplete="off" value="0.8" checked>
+          <label class="btn btn-outline-secondary btn-lg" for="chaos-2">Low</label>
+
+          <input type="radio" class="btn-check" name="chaos" id="chaos-3" autocomplete="off" value="0.6">
+          <label class="btn btn-outline-secondary btn-lg" for="chaos-3">Mid</label>
+
+          <input type="radio" class="btn-check" name="chaos" id="chaos-4" autocomplete="off" value="0.3">
+          <label class="btn btn-outline-secondary btn-lg" for="chaos-4">High</label>
+        </div>
+        <div class="col-md-6 mt-2 mb-2">
+          <button class="btn btn-primary btn-lg" type="submit">Generate</button>
+        </div>
+      </div>
+    </form>
+
+    <div id="grid" style="height:1000px; width:100%"></div>
+  </main>
 
   <script src="honeycomb.min.js"></script>
   <script src="svg.min.js"></script>
   
   <script>
-    // Sizes: 10, 21, 28, 35, 42
-    generateGrid(28, 0.8);
+    const form = document.getElementById('controls');
+    form.addEventListener('submit', function (event) {
+      event.preventDefault();
+      generateGrid();
+    });
+    
+    generateGrid();
+    
+    function generateGrid() {
+      // Get params from form
+      const formData = new FormData(form);
 
-    function generateGrid(tileCount, tileProbability) {
+      const tileCount = formData.get('tiles');
+      const tileProbability = formData.get('chaos');
+
       // Initialize board with moon tiles
       const tiles = [{
         q: 0,
@@ -108,10 +164,12 @@
 
     // Render using svg.js
     function renderGrid(tiles) {
+      // Define constants
       const iconSize = 40;
       const hexSize = 50;
 
       // Initialize canvas
+      document.getElementById('grid').innerHTML = '';
       const draw = SVG().addTo('#grid').size('100%', '100%');
       const canvasWidth = draw.node.clientWidth;
       const canvasHeight = draw.node.clientHeight;
