Move static files to new dir

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Tsukuyumi Board Generator</title>
   <link rel="icon" href="icons/tsukuyumi.png">
   
-  <link rel="stylesheet" href="bootstrap.min.css">
+  <link rel="stylesheet" href="static/bootstrap.min.css">
 </head>
 <body>
   
@@ -57,8 +57,8 @@
     <div id="grid" class="mx-auto"></div>
   </main>
 
-  <script src="honeycomb.min.js"></script>
-  <script src="svg.min.js"></script>
+  <script src="static/honeycomb.min.js"></script>
+  <script src="static/svg.min.js"></script>
   
   <script>
     const form = document.getElementById('controls');
