--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
       <div class="col-md-5 mt-2">
         <h4>Scatter level</h4>
         <div class="d-flex">
-          <input type="radio" class="btn-check" name="scatter" id="scatter-1" autocomplete="off" value="1-1">
-          <label class="btn btn-outline-secondary btn-lg flex-fill me-1" for="scatter-1">None</label>
+          <input type="radio" class="btn-check" name="params" id="params-1" autocomplete="off" value='{"tileProbability": 1, "adjancencyRequirement": 1, "allowHoles": false}'>
+          <label class="btn btn-outline-secondary btn-lg flex-fill me-1" for="params-1">None</label>
 
-          <input type="radio" class="btn-check" name="scatter" id="scatter-2" autocomplete="off" value="0.75-2" checked>
-          <label class="btn btn-outline-secondary btn-lg flex-fill me-1" for="scatter-2">Low</label>
+          <input type="radio" class="btn-check" name="params" id="params-2" autocomplete="off" value='{"tileProbability": 0.75, "adjancencyRequirement": 2, "allowHoles": false}' checked>
+          <label class="btn btn-outline-secondary btn-lg flex-fill me-1" for="params-2">Low</label>
 
-          <input type="radio" class="btn-check" name="scatter" id="scatter-3" autocomplete="off" value="0.75-1">
-          <label class="btn btn-outline-secondary btn-lg flex-fill me-1" for="scatter-3">Mid</label>
+          <input type="radio" class="btn-check" name="params" id="params-3" autocomplete="off" value='{"tileProbability": 0.75, "adjancencyRequirement": 1, "allowHoles": false}'>
+          <label class="btn btn-outline-secondary btn-lg flex-fill me-1" for="params-3">Mid</label>
 
-          <input type="radio" class="btn-check" name="scatter" id="scatter-4" autocomplete="off" value="0.25-1">
-          <label class="btn btn-outline-secondary btn-lg flex-fill" for="scatter-4">High</label>
+          <input type="radio" class="btn-check" name="params" id="params-4" autocomplete="off" value='{"tileProbability": 0.5, "adjancencyRequirement": 1, "allowHoles": true}'>
+          <label class="btn btn-outline-secondary btn-lg flex-fill" for="params-4">High</label>
         </div>
       </div>
       <div class="col-md-2 mt-3">
@@ -73,10 +73,12 @@
       // Get params from form
       const formData = new FormData(form);
 
-      const scatterValues = formData.get('scatter').split('-');
       const tileCount = formData.get('tiles');
-      const tileProbability = scatterValues[0];
-      const adjancencyRequirement = scatterValues[1];
+      const params = JSON.parse(formData.get('params'));
+
+      const tileProbability = params.tileProbability;
+      const adjancencyRequirement = params.adjancencyRequirement;
+      const allowHoles = params.allowHoles;
 
       // Initialize board with moon tiles
       const tiles = [{
@@ -102,7 +104,13 @@
           const newRing = ring(r);
           shuffleArray(newRing);
           newRing.forEach(tile => {
-            if (tilesUsed < tileCount && !tileListContains(tile, tiles) && isAdjacent(tile, tiles, adjancencyRequirement) && Math.random() < tileProbability){
+            if (
+              tilesUsed < tileCount &&
+              !tileListContains(tile, tiles) &&
+              isAdjacent(tile, tiles, adjancencyRequirement) &&
+              !(!allowHoles && createsHole(tile, tiles)) &&
+              Math.random() < tileProbability
+            ){
               tilesUsed++;
               const properties = availableTiles.pop();
   
@@ -143,6 +151,13 @@
     // Is the tile contiguous to the board?
     function isAdjacent(tile, tileList, adjancencyRequirement) {
       return neighbors(tile).filter(neighbor => tileListContains(neighbor, tileList)).length >= adjancencyRequirement;
+    }
+
+    // Does addong this tile to the board create a hole?
+    function createsHole(tile, tileList) {
+      return neighbors(tile).some(potentialHole =>
+        !tileListContains(potentialHole, tileList) && neighbors(potentialHole).filter(neighbor => tileListContains(neighbor, tileList)).length == 5
+      );
     }
 
     // Get the set of neighbor coordinates for a tile
